# pyapetnet

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  _config.yml  environment.yml  index.md  py36-tf19-pyapetnet-cpu.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: build_python.yaml  micromamba.yaml  publish-to-pypi.yaml  publish-to-pypi.yml  publish-to-test-pypi.yml  publish_pypi.yaml  publish_test_pypi.yaml  python_build.yaml
binder/: environment.yml  postBuild
demo_data/: .gitignore  brainweb_06_osem_cropped.nii  brainweb_06_t1_cropped.nii  misalign_pet.py
demo_data/brainweb_06_osem_dcm/: PT.1.2.826.0.1.3680043.9.7147.1033043698501165970196430614166691739.dcm  PT.1.2.826.0.1.3680043.9.7147.1038777933126512874942021877042759080.dcm  PT.1.2.826.0.1.3680043.9.7147.1075074802114127960227045455929964192.dcm  PT.1.2.826.0.1.3680043.9.7147.1075248877977494930432767575059252034.dcm  PT.1.2.826.0.1.3680043.9.7147.1104440466393326646418323696650046308.dcm  PT.1.2.826.0.1.3680043.9.7147.1108450096027081128161879119457257900.dcm  PT.1.2.826.0.1.3680043.9.7147.1109360618357534433056491322180430700.dcm  PT.1.2.826.0.1.3680043.9.7147.1121271865242293888818028868856109317.dcm  PT.1.2.826.0.1.3680043.9.7147.1133130491421228030055287548715824776.dcm  PT.1.2.826.0.1.3680043.9.7147.1182838251101065002431261522293521452.dcm  PT.1.2.826.0.1.3680043.9.7147.1205138374943291104722950470740306499.dcm  PT.1.2.826.0.1.3680043.9.7147.1208256581307214915954179022751750291.dcm  PT.1.2.826.0.1.3680043.9.7147.1229223009792543516592214698110543075.dcm  PT.1.2.826.0.1.3680043.9.7147.1230687136742335222058945811453232558.dcm  PT.1.2.826.0.1.3680043.9.7147.1263622886998478548084319195331302165.dcm  PT.1.2.826.0.1.3680043.9.7147.1269176107719624074875731096307660521.dcm  PT.1.2.826.0.1.3680043.9.7147.1279788552665224965912581040395969599.dcm  PT.1.2.826.0.1.3680043.9.7147.1287967448258243652073729594483184237.dcm  PT.1.2.826.0.1.3680043.9.7147.1288715202204059253129943901809169695.dcm  PT.1.2.826.0.1.3680043.9.7147.1293272772212937729966208066603986571.dcm  PT.1.2.826.0.1.3680043.9.7147.1297456091639218108020135007391352191.dcm  PT.1.2.826.0.1.3680043.9.7147.1302179123043561961742190322193603885.dcm  PT.1.2.826.0.1.3680043.9.7147.1328900211006460375695483996826632398.dcm  PT.1.2.826.0.1.3680043.9.7147.1351374791956888116787165782804806289.dcm  (+75 more)
demos/: 000_predict_from_nifti.py  001_predict_from_dicom.py  002_setup_brainweb.py  003_data_generator.py  004_train_model.py  005_bowcnn_queue.py
notebooks/: .gitignore  00_introduction.ipynb  01_inference_demo_brainweb.ipynb  01_tf_data.ipynb  02_tf_data.ipynb  02_tf_models.ipynb  03_tf_models.ipynb  03_training.ipynb  04_inference_demo_brainweb.ipynb  04_training.ipynb  pytorch_data.py
pyapetnet/: aff_transform.py  align_inputs.py  command_line_tools.py  generators.py  list_models.py  losses.py  models.py  pet_dcm_tags_to_copy.txt  predict_from_dicom.py  predict_from_nifti.py  predictors.py  preprocessing.py  read_dicom.py  registration.py  rigid_registration.py  threeaxisviewer.py  utils.py  write_dicom.py  zoom3d.py
pyapetnet/demos/: .gitignore  000_predict_from_nifti.py  (+1 more)
pyapetnet_2d/: apetnet2d.py  train_bow_2d.py
scripts/: simulate_mmr_data.pro  train_bow_cnn_tf2.py  train_cfg.json
scripts_bow/: .gitignore  batch_predict.py  brainweb.py  simulate_2d_data.pro  simulate_mmr_data.pro  train_bow_cnn.py  train_bow_cnn_tf2.py  train_cfg.json  validate_bow_cnn.py
tests/: test_prediction.py  test_version.py
wip/: setup.py
(+478 files in other folders)
