[project]
name = "pyapetnet"
dynamic = ["version"]
description = "Default template for PDM package"
authors = [
    {name = "Georg Schramm", email = "georg.schramm@kuleuven.be"},
]
requires-python = ">=3.9,<3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "SimpleITK~=2.0",
    "pymirc~=0.29",
    "click~=8.0",
    "tensorflow~=2.2",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.scripts]
pyapetnet_list_models = "pyapetnet.scripts.list_models:list_models"
pyapetnet_predict_from_dicom = "pyapetnet.scripts.predict_from_dicom:predict_from_dicom"
pyapetnet_predict_from_nifti = "pyapetnet.scripts.predict_from_nifti:predict_from_nifti"

[project.urls]
Homepage = "https://github.com/gschramm/pyapetnet"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.1",
]

[tool.pdm.version]
source = "scm"
write_to = "pyapetnet/_version.py"
write_template = "__version__ = '{}'"